create get profile endpoint
